# polymarket-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  scratchpad.md
.github/workflows/: lint-and-format.yml
agents/adapters/: clob_mock.py  gamma_mock.py  news_mock.py  search_mock.py  trade_rules_mock.py
agents/application/: executor.py  orchestrator.py  prompts.py  trader.py
agents/connectors/: chroma.py  news.py
agents/ports/: clob.py  gamma.py  news.py  search.py
polymarket_agent/: engine.py  main.py  server.py
polymarket_agent/adapters/: clob_mock.py  search_mock.py
polymarket_agent/application/: agent.py  application.py  orchestrator.py  trader.py
polymarket_agent/engine/: scheduler.py  task.py
polymarket_agent/mock_adapters/: clob_mock.py  gamma_mock.py  news_mock.py  search_mock.py  trade_rules_mock.py
polymarket_agent/ports/: clob.py  gamma.py  news.py  search.py
polymarket_agent/utils/: logger.py  mock_data.py  types.py
scripts/: server.py
tests/: test.py
