[project]
name = "polymarket-agent"
version = "0.1.0"
description = "An agent for interacting with Polymarket."
dependencies = [
    "fastapi",
    "uvicorn",
    "web3",
    "langchain",
    "langchain-openai",
    "langchain-chroma",
    "chromadb",
    "python-dotenv",
    "newsapi-python",
    "poly_eip712_structs",
    "py_clob_client",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
    "uv",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"