[project]
name = "polymarket-agent"
version = "0.1.0"
description = "An agent for interacting with Polymarket."
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "uv",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
